@@ -34,6 +34,8 @@ Zope Changes
 
     Bugs fixed
 
+     - Collector #1129: Improper parsing of ISO8601 in DateTime.
+
      - Removed pervasive use of string exceptions (some may still be
        hiding in the woodwork, but all raise's with string literals are
        gone).
